--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "sacda_test",
   "private": true,
   "scripts": {
-    "livereload": "livereload --exclusions node_modules/ --exts 'css,js,twig,theme,apng,avif,gif,jpg,jpeg,jfif,pjpeg,pjp,png,svg,webp'"
+    "livereload": "livereload --exclusions node_modules/ --exts 'css,js,twig,theme,apng,avif,gif,jpg,jpeg,jfif,pjpeg,pjp,png,svg,webp'",
+    "tailwind": "tailwindcss -i ./css/main.css -o ./dist/main.css --watch",
+    "dev": "concurrently \"pnpm run tailwind\" \"pnpm run livereload\""
   },
   "devDependencies": {
+    "concurrently": "^9.1.0",
     "livereload": "^0.9.3"
+  },
+  "dependencies": {
+    "@tailwindcss/cli": "^4.1.17",
+    "tailwindcss": "^4.1.17"
   }
 }
