--- a/sacda_test.libraries.yml
+++ b/sacda_test.libraries.yml
@@ -1,7 +1,7 @@
 # Main theme library.
 global:
-  js:
-    js/sacda-test.js: {}
+  # js:
+  #   js/sacda-test.js: {}
   css:
     theme:
       dist/main.css: {}
