--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "livereload": "livereload --exclusions node_modules/ --exts 'css,js,twig,theme,apng,avif,gif,jpg,jpeg,jfif,pjpeg,pjp,png,svg,webp'",
     "tailwind": "tailwindcss -i ./css/main.css -o ./dist/main.css --watch",
-    "dev": "concurrently \"pnpm run tailwind\" \"pnpm run livereload\""
+    "dev": "concurrently \"pnpm run tailwind\" \"pnpm run livereload\"",
+    "build:components": "find components -maxdepth 1 -mindepth 1 -type d -exec sh -c 'cd \"{}\" && pnpm build' \\;"
+
   },
   "devDependencies": {
     "concurrently": "^9.1.0",
