--- a/components/test_svelte/.gitignore
+++ b/components/test_svelte/.gitignore
@@ -1,24 +1,18 @@
-# Dependencies
-node_modules/
-pnpm-lock.yaml
-package-lock.json
-yarn.lock
-
-# Build output
-dist/
-dist-ssr/
-
 # Logs
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
+yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Development
+node_modules
+dist
+dist-ssr
 *.local
 
-# IDE
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -28,6 +22,3 @@ lerna-debug.log*
 *.njsproj
 *.sln
 *.sw?
-
-# OS
-Thumbs.db
