--- a/src-svelte/package.json
+++ b/src-svelte/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test_svelte",
+  "name": "src-svelte",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -22,5 +22,8 @@
     "overrides": {
       "vite": "npm:rolldown-vite@7.2.5"
     }
+  },
+  "dependencies": {
+    "@sveltejs/adapter-auto": "^7.0.0"
   }
 }
