--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "private": true,
   "scripts": {
     "livereload": "livereload --exclusions node_modules/ --exts 'css,js,twig,theme,apng,avif,gif,jpg,jpeg,jfif,pjpeg,pjp,png,svg,webp'",
-    "tailwind": "tailwindcss -i ./css/main.css -o ./dist/main.css --watch",
-    "dev:twig": "concurrently \"pnpm run tailwind\" \"pnpm run livereload\"",
-    "dev:svelte": "cd src-svelte && pnpm build --watch",
+    "tailwind:watch": "tailwindcss -i ./css/main.css -o ./dist/main.css --watch",
+    "dev:twig": "concurrently \"pnpm run tailwind:watch\" \"pnpm run livereload\"",
+    "dev:svelte": "cd src-svelte && vite build --watch && cd ../..",
+    "build:svelte": "cd src-svelte && vite build && cd ../..",
     "dev": "concurrently \"pnpm run dev:twig\" \"pnpm run dev:svelte\""
   },
   "devDependencies": {
