--- a/src-svelte/package.json
+++ b/src-svelte/package.json
@@ -11,10 +11,12 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@tailwindcss/vite": "^4.1.17",
     "@tsconfig/svelte": "^5.0.6",
     "@types/node": "^24.10.1",
     "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
+    "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@7.2.5"
   },
@@ -24,6 +26,11 @@
     }
   },
   "dependencies": {
-    "@sveltejs/adapter-auto": "^7.0.0"
+    "@lucide/svelte": "^0.561.0",
+    "@sveltejs/adapter-auto": "^7.0.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwind-variants": "^3.2.2",
+    "tw-animate-css": "^1.4.0"
   }
 }
