--- a/src-svelte/tsconfig.app.json
+++ b/src-svelte/tsconfig.app.json
@@ -1,12 +1,16 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2022",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "types": ["svelte", "vite/client"],
-    "noEmit": true,
+    "types": [
+      "svelte",
+      "vite/client"
+    ],
+    "emitDeclarationOnly": true,
     /**
      * Typecheck JS in `.svelte` and `.js` files by default.
      * Disable checkJs if you'd like to use dynamic types in JS.
@@ -17,5 +21,13 @@
     "checkJs": true,
     "moduleDetection": "force"
   },
-  "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.js",
+    "src/**/*.svelte",
+    "*.build.ts",
+  ],
+  "exclude": [
+    "src/App.svelte"
+  ]
 }
