FINALLY WORKING LETS GOOOO

--- a/components/shadcn-test/shadcn-test.component.yml
+++ b/components/shadcn-test/shadcn-test.component.yml
@@ -1,10 +1,8 @@
 $schema: https://git.drupalcode.org/project/drupal/-/raw/10.1.x/core/modules/sdc/src/metadata.schema.json
-name: hello-test
+name: shadcn-test
 
 js:
-  hello-test.js: {}
-css:
-  main.css: {}
+  shadcn-test.js: {}
 
 # props:
 #   type: object
