--- a/src-svelte/package.json
+++ b/src-svelte/package.json
@@ -5,16 +5,18 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node components.build.ts",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
+    "@internationalized/date": "^3.10.1",
     "@lucide/svelte": "^0.561.0",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tailwindcss/vite": "^4.1.17",
     "@tsconfig/svelte": "^5.0.6",
     "@types/node": "^24.10.1",
+    "bits-ui": "^2.14.4",
     "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
     "tailwind-variants": "^3.2.2",
