--- a/sacda_test.info.yml
+++ b/sacda_test.info.yml
@@ -4,17 +4,16 @@ base theme: olivero
 description: test
 package: Custom
 core_version_requirement: ^10
-libraries:
-  - sacda_test/global
+# libraries:
+#   - sacda_test/global
 regions:
-  header: "Header"
-  menu_top: "Top menu"
-  menu_bottom: "Primary menu"
+  # header: "Header"
+  # menu_top: "Top menu"
+  primary_menu: "Primary menu"
 
-  breadcrumb: "Breadcrumb"
   content: "Content"
 
-  sidebar_first: "Sidebar first"
-  sidebar_second: "Sidebar second"
+  # sidebar_first: "Sidebar first"
+  # sidebar_second: "Sidebar second"
 
   footer: "Footer"
