feat: updated some build steps to properly include js/ts files

--- a/sacda_test.libraries.yml
+++ b/sacda_test.libraries.yml
@@ -1,7 +1,7 @@
-# Main theme library.
+# Main theme library (auto-generated - do not edit manually)
 global:
-  # js:
-  #   js/sacda-test.js: {}
+  js:
+    dist/search.util.js: {}
   css:
-    theme: 
+    theme:
       dist/main.css: {}
