--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"vite build --watch\" \"pnpm run livereload\"",
-    "build": "vite build",
+    "build": "vite build && pnpm run update-libraries",
+    "update-libraries": "tsx scripts/update-libraries.ts",
     "livereload": "livereload --exclusions node_modules/,dist/ --exts 'css,js,twig,theme,apng,avif,gif,jpg,jpeg,jfif,pjpeg,pjp,png,svg,webp'"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "@types/node": "^25.0.3",
     "concurrently": "^9.1.0",
     "livereload": "^0.9.3",
     "tailwindcss": "^4.1.17",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "vite": "^6.0.6"
+  },
+  "dependencies": {
+    "glob": "^13.0.0"
   }
 }
