--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "sacda_test",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "concurrently \"vite build --watch\" \"pnpm run livereload\"",
-    "build": "vite build && pnpm run update-libraries",
-    "update-libraries": "tsx scripts/update-libraries.ts",
-    "livereload": "livereload --exclusions node_modules/,dist/ --exts 'css,js,twig,theme,apng,avif,gif,jpg,jpeg,jfif,pjpeg,pjp,png,svg,webp'"
-  },
-  "devDependencies": {
-    "@tailwindcss/vite": "^4.1.17",
-    "@types/node": "^25.0.3",
-    "concurrently": "^9.1.0",
-    "livereload": "^0.9.3",
-    "tailwindcss": "^4.1.17",
-    "tsx": "^4.21.0",
-    "tw-animate-css": "^1.4.0",
-    "vite": "^6.0.6"
-  },
-  "dependencies": {
-    "glob": "^13.0.0",
-    "gsap": "^3.14.2"
-  }
+	"name": "sacda_test",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "concurrently \"bun scripts/build.ts --watch\" \"bun run livereload\"",
+		"build": "bun scripts/build.ts && bun run update-libraries",
+		"update-libraries": "bun scripts/update-libraries.ts",
+		"livereload": "livereload --exclusions node_modules/,dist/ --exts 'css,js,twig,theme,apng,avif,gif,jpg,jpeg,jfif,pjpeg,pjp,png,svg,webp'"
+	},
+	"devDependencies": {
+		"@types/node": "^25.0.3",
+		"concurrently": "^9.1.0",
+		"livereload": "^0.9.3",
+		"tailwindcss": "^4.1.18",
+		"tw-animate-css": "^1.4.0"
+	},
+	"dependencies": {
+		"glob": "^13.0.0",
+		"gsap": "^3.14.2"
+	}
 }
