--- a/config/install/block.block.sacda_account_menu.yml
+++ b/config/install/block.block.sacda_account_menu.yml
@@ -2,23 +2,23 @@ langcode: en
 status: true
 dependencies:
   config:
-    - system.menu.main
+    - system.menu.account
   module:
     - system
   theme:
-    - sacda_test
-id: sacda_test_main_menu
-theme: sacda_test
-region: menu_bottom
+    - sacda
+id: sacda_account_menu
+theme: sacda
+region: menu_top
 weight: 0
 provider: null
-plugin: 'system_menu_block:main'
+plugin: 'system_menu_block:account'
 settings:
-  id: 'system_menu_block:main'
-  label: 'Main navigation'
+  id: 'system_menu_block:account'
+  label: 'User account menu'
   label_display: '0'
   provider: system
   level: 1
-  depth: 2
+  depth: 1
   expand_all_items: false
 visibility: {  }
