--- a/config/install/block.block.sacda_branding.yml
+++ b/config/install/block.block.sacda_branding.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - system
   theme:
-    - sacda_test
-id: sacda_test_branding
-theme: sacda_test
+    - sacda
+id: sacda_branding
+theme: sacda
 region: header
 weight: -10
 provider: null
