--- a/config/install/block.block.sacda_page_title.yml
+++ b/config/install/block.block.sacda_page_title.yml
@@ -4,16 +4,16 @@ dependencies:
   module:
     - system
   theme:
-    - sacda_test
-id: sacda_test_messages
-theme: sacda_test
+    - sacda
+id: sacda_page_title
+theme: sacda
 region: content
-weight: -10
+weight: -20
 provider: null
-plugin: system_messages_block
+plugin: page_title_block
 settings:
-  id: system_messages_block
-  label: 'Status messages'
+  id: page_title_block
+  label: 'Page title'
   label_display: '0'
   provider: system
 visibility: {  }
