--- a/config/optional/block.block.sacda_footer_menu.yml
+++ b/config/optional/block.block.sacda_footer_menu.yml
@@ -2,20 +2,20 @@ langcode: en
 status: true
 dependencies:
   config:
-    - system.menu.account
+    - system.menu.footer
   module:
     - system
   theme:
-    - sacda_test
-id: sacda_test_account_menu
-theme: sacda_test
-region: menu_top
+    - sacda
+id: sacda_footer_menu
+theme: sacda
+region: footer
 weight: 0
 provider: null
-plugin: 'system_menu_block:account'
+plugin: 'system_menu_block:footer'
 settings:
-  id: 'system_menu_block:account'
-  label: 'User account menu'
+  id: 'system_menu_block:footer'
+  label: 'Footer menu'
   label_display: '0'
   provider: system
   level: 1
