--- a/sacda.info.yml
+++ b/sacda.info.yml
@@ -6,6 +6,7 @@ description: Theme for sacda.ca frontend
 core_version_requirement: ^10
 libraries:
   - sacda/global
+# all this below is just for while we do deveopment
 libraries-override:
   olivero/global-styling:
     css:
