--- a/sacda.libraries.yml
+++ b/sacda.libraries.yml
@@ -1,6 +1,7 @@
 # Main theme library (auto-generated - do not edit manually)
 global:
   js:
+    dist/carousel.js: {}
     dist/header.js: {}
     dist/search.util.js: {}
   css:
