--- a/config/install/sacda.settings.yml
+++ b/config/install/sacda.settings.yml
@@ -1,60 +1,51 @@
-# Default theme settings for SACDA Test theme.
+# Default theme settings for SACDA theme.
 
-# Footer partners - array of partner items with image file ID, link, name and weight for ordering.
-# Note: image_fid will be populated when images are uploaded through the theme settings form.
-# footer_partners: []
-
-# Default footer partners (image_fid left as 0 placeholders to be replaced after upload)
+# Footer partners (image_fid: 0 = no image yet, upload via theme settings)
 footer_partners:
-    - name: "SACDA"
-      image_fid: 0
-      link: "http://sacda.ca"
-      weight: 0
-    - name: "South Asian Studies Institute"
-      image_fid: 0
-      link: "http://www.ufv.ca/sasi"
-      weight: 1
-    - name: "University of the Fraser Valley"
-      image_fid: 0
-      link: "http://www.ufv.ca/"
-      weight: 2
-    - name: "South Asian Canadian Legacy Project"
-      image_fid: 0
-      link: "https://saclp.southasiancanadianheritage.ca/"
-      weight: 3
-    - name: "Canada"
-      image_fid: 0
-      link: "https://www.canada.ca/en.html"
-      weight: 4
-    - name: "UBC Irving K. Barber Learning Centre"
-      image_fid: 0
-      link: "https://ikblc.ubc.ca/"
-      weight: 5
+  - name: "University of the Fraser Valley"
+    image_fid: 0
+    link: "http://www.ufv.ca/"
+    weight: 0
+  - name: "Province of British Columbia"
+    image_fid: 0
+    link: "https://www.bcb.ca/en"
+    weight: 1
+  - name: "Canada"
+    image_fid: 0
+    link: "https://www.canada.ca/en.html"
+    weight: 2
+  - name: "Council of Library and Information Resources"
+    image_fid: 0
+    link: "https://www.clir.org/"
+    weight: 3
+  - name: "UBC Irving K. Barber Learning Centre"
+    image_fid: 0
+    link: "https://ikblc.ubc.ca/"
+    weight: 4
 
-# Footer social links - array of social link items with icon, link, title and weight for ordering.
+# Footer social links
 footer_social_links:
-    - title: "Facebook"
-      icon: "facebook"
-      link: "https://www.facebook.com/profile.php?id=100092345694324"
-      weight: 0
-    - title: "Instagram"
-      icon: "instagram"
-      link: "https://www.instagram.com/sacda.sasi/"
-      weight: 1
-    - title: "Twitter"
-      icon: "twitter"
-      link: "https://twitter.com/ufvsasi"
-      weight: 2
-    - title: "Youtube"
-      icon: "youtube"
-      link: "https://www.youtube.com/channel/UCN5tvG-Q8ly9z0YOyWsoaNA"
-      weight: 3
-    - title: "Flickr"
-      icon: "flickr"
-      link: "https://www.flickr.com/photos/ufvcics/albums"
-      weight: 4
+  - title: "Facebook"
+    icon: "facebook"
+    link: "https://www.facebook.com/profile.php?id=100092345694324"
+    weight: 0
+  - title: "Instagram"
+    icon: "instagram"
+    link: "https://www.instagram.com/sacda.sasi/"
+    weight: 1
+  - title: "Twitter"
+    icon: "twitter"
+    link: "https://twitter.com/ufvsasi"
+    weight: 2
+  - title: "Youtube"
+    icon: "youtube"
+    link: "https://www.youtube.com/channel/UCN5tvG-Q8ly9z0YOyWsoaNA"
+    weight: 3
+  - title: "Flickr"
+    icon: "flickr"
+    link: "https://www.flickr.com/photos/ufvcics/albums"
+    weight: 4
 
-# Theme color settings
-primary_color: "#F99D2A"
-secondary_color: "#414042"
-light_color: "#FFEDC2"
+# Carousel (populated by _import_carousel_slides or via theme settings)
+carousel_slides: []
+carousel_autoplay_speed: 5000
