--- a/sacda.info.yml
+++ b/sacda.info.yml
@@ -1,26 +1,27 @@
 name: sacda
 type: theme
-base theme: olivero
+# base theme: olivero
+base theme: false
 description: Theme for sacda.ca frontend
 # screenshot: src/assets/logo.svg
 core_version_requirement: ^10
 libraries:
   - sacda/global
 # all this below is just for while we do deveopment
-libraries-override:
-  olivero/global-styling:
-    css:
-      base:
-        css/base/base.css: false
-      layout:
-        css/layout/region.css: false
-        css/layout/layout.css: false
-        css/layout/layout-content-narrow.css: false
-        css/layout/layout-content-medium.css: false
-  core/drupal.base:
-    css:
-      component:
-        /core/modules/system/css/components/hidden.module.css: false
+# libraries-override:
+#   olivero/global-styling:
+#     css:
+#       base:
+#         css/base/base.css: false
+#       layout:
+#         css/layout/region.css: false
+#         css/layout/layout.css: false
+#         css/layout/layout-content-narrow.css: false
+#         css/layout/layout-content-medium.css: false
+#   core/drupal.base:
+#     css:
+#       component:
+#         /core/modules/system/css/components/hidden.module.css: false
 
 regions:
   # header: "Header"
