--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"tw-animate-css": "^1.4.0"
 	},
 	"dependencies": {
+		"@tailwindcss/cli": "^4.1.18",
 		"embla-carousel": "^8.6.0",
 		"embla-carousel-autoplay": "^8.6.0",
 		"glob": "^13.0.0",
