--- a/sacda.info.yml
+++ b/sacda.info.yml
@@ -34,6 +34,7 @@ regions:
   # breadcrumb: "Breadcrumb"
   content_top: "Content top"
   content: "Content"
+  object_sidebar: "Object Sidebar"
 
   # sidebar_first: "Sidebar first"
   # sidebar_second: "Sidebar second"
